EDA on MLB batted ball data - final version

--- a/MLB EDA Proj/EDA Prez.Rmd
+++ b/MLB EDA Proj/EDA Prez.Rmd
@@ -252,15 +252,15 @@ prop_Batting %>%
 #YES, at alpha level 0.05, we have sufficient evidence to reject the null hypothesis that the proportion of on-base, outs, and home-runs between left and right-handed batters are different.**
 ```
 --
-**> Left-handed batters get on base more often **
+**> Right-handed batters get on base more often **
 
 --
 
-**> Left-handed batters get out less often **
+**> Left-handed batters get out more often **
 
 --
 
-**> Right-handed batters hit more homeruns**
+**> Left-handed batters hit more homeruns**
 
 [***](#signf)
 
@@ -509,10 +509,10 @@ std_batting %>%
   coord_fixed()
 ```
 
-```{r k-means, echo=FALSE, fig.align='center', out.width='40%'}
+```{r k-means, echo=FALSE, fig.align='center'}
 # Initialize number of clusters to search over
 n_clusters_search <- 2:12
-tibble(total_wss = 
+elbow <- tibble(total_wss = 
          # Compute total WSS for each number by looping with sapply
          sapply(n_clusters_search,
                 function(k) {
@@ -528,9 +528,7 @@ tibble(total_wss =
   geom_line() + geom_point() +
   labs(x = "Number of clusters K", y = "Total WSS") +
   theme_bw()
-```
 
-```{r, echo=FALSE, fig.align='center', fig.height=3, fig.width=9}
 ## k-means
 
 init_kmeans <- 
@@ -539,12 +537,12 @@ init_kmeans <-
          algorithm = "Lloyd", centers = 3,
          nstart = 30)
 
-std_batting %>%
+kmeans <- std_batting %>%
   mutate(batting_clusters = 
            as.factor(init_kmeans$cluster)) %>%
   ggplot(aes(x = std_hit, y = std_speed,
              color = batting_clusters)) +
-  geom_point() + 
+  geom_point(alpha = 0.5) + 
   ggthemes::scale_color_colorblind() +
   theme_bw() +
   theme(legend.position = "bottom") +
@@ -553,6 +551,9 @@ std_batting %>%
 
 #Kmeans tends to be best used for more circular looking patterns. 
 #there’s probably only one cluster here” rather than convincing yourself that there should be more.
+
+library(gridExtra)
+grid.arrange(elbow, kmeans, nrow =1)
 
 ```
 
@@ -618,7 +619,8 @@ filter_players %>%
   geom_point(alpha = 0.5) + 
   ggthemes::scale_color_colorblind() +
   theme_bw() +
-  theme(legend.position = "bottom")
+  theme(legend.position = "bottom") +
+  labs(x = "Hit distance (feet)", y = "Launch speed (mph)")
 
 ```
 ]
@@ -646,7 +648,7 @@ filter_players %>%
   ggthemes::scale_color_colorblind() +
   theme_bw() +
   theme(legend.position = "bottom") +
-  labs(x = "Hit Distance (mph)", y = "Launch Speed (mph)")
+  labs(x = "Hit Distance (feet)", y = "Launch Speed (mph)")
 
 # View cluster 3
 
@@ -658,10 +660,12 @@ best_batters <- filter_players %>%
 ```
 ---
 
-### Strongest batters
+### Cluster 3
 
 ```{r, echo=FALSE}
-knitr::kable(data.frame(best_batters), format = 'html') 
+best <- rename(data.frame(best_batters), `Strongest Batters:` = best_batters)
+
+knitr::kable(best, format = 'html') 
 
 #group of strongest batters this season in terms of further hit distance and highest launch speed
 ```
@@ -678,16 +682,19 @@ knitr::kable(data.frame(best_batters), format = 'html')
 - Batted balls from left-handed vs right-handed batters do differ (marginally significant)
   
 - The probability of a pitch being thrown is not constant throughout an at bat
-      - The only type of pitch thrown during a 3-0 count is a fastball
+  
 --
 
 ### Limitations
 
-- Relatively small dataset, only 3 months into the season
+- Small dataset (less than 2 weeks of games)
 
 - Team names are not included in the dataset
 
-- Next steps: analyzing scores/results depending on batted balls, modeling
+- Next steps: 
+  - analyzing scores/results depending on batted balls
+  - effects of shifts
+  - future modeling
 
 ---
 
@@ -777,4 +784,70 @@ data.frame(events = c("Onbase", "Outs", "Homerun"),
 
 [Back](#next)
 ---
+
+#Script
+
+
+hello all, Jackie and I are very excited to present our project on exploratory data analysis on major league baseball data
+
+——
+
+before diving in, I would like to provide some high level goals that helped guide the process of working on this project.
+
+to start off, we wanted to make sure we really understood the components of baseball statistics, especially myself as i am not as familiar with the intricacies of baseball as jackie is. 
+
+after taking that first initial step, we wanted to explore this mlb batted balls data in order to discover trends, patterns, and answer several questions and hypotheses we were curious about.
+
+and ultimately we hope that this initial eda can guide and inform future models that either predict outcomes or hopefully improve player or team performance
+
+——
+
+we would now like to quickly mention on how we filtered some variables, for instance how we recoded all the events in our dataset, such as double, field-error, etc as either on-base, out, or hr
+
+——
+
+Upon having this data on batted balls, the first question that came to mind was what is the most common way of getting out or more specifically what was the distribution of ways of getting out cuz of course we assumed that field outs had to be most common, but how did that proportion compare to the other ways a player could get out
+
+Our results indicate that indeed field outs are the most common, by a substantial margin, much more than we initially thought, followed by force outs and grounded into double play
+
+——
+
+then we wondered…
+
+In terms of hit location, this was expected, as you can see from the plot that left handed hitters tended to hit more towards first base and right field compared to right-handed batter who hit more towards the left side of the field. This plot also contains pitch type but jackie will get into that in more depth later on
+
+——
+
+Our next question was …
+
+looking solely the proportions of left-handed and right-handed batters among their respective groups, we 
+see from this barplot that 1. 2. 3. And although this difference seems pretty small, t-tests indicate that all three differences are significant at an alpha level of 0.5
+the actual pvalues are in our appendix if you are interested in that later
+
+——
+
+hit distance: distance of the batted ball in feet
+launch speed: exit velocity of the ball off the bat (mph)
+
+k means as it best used for more circular looking patterns and looking at our elbow plot on the left, we decided on 3 clusters.
+
+If I could direct your attention to the right, we see that
+short distance slow launch speed is a cluster, short distance, high launch speed, and further distance and high launch speed
+
+this clustering was pretty trivial and not as informative as we had hoped since it just groups of batted balls 
+
+—-
+
+therefore, this led us to clustering players instead on batted balls
+
+because we ultimately wanted a prototype observation or representative player in each cluster to make communicating results easier, we used the minimax linkage function and cut the dendrogram on the left to create 3 clusters or the 3 groups of players you see on the plot on the right
+
+—
+
+this graph displays the prototypes or players that are represent the 3 clusters, as sean murphy represents the players so far who have batted balls furthest with the fastest launch speed so far this season
+
+I should note that we took out players who had less than 5 at bats this season, as the average at bats per player was around 17
+—
+
+and this table lists all of the players that are part of that third cluster, which we are categorizing as the strongest batters this season
 
